--- a/index.html
+++ b/index.html
@@ -23,10 +23,110 @@
         width: 100%;
     }
 
+    
+  /* Popup styling */
+  .mapboxgl-popup {
+    padding-bottom: 5px;
+  }
+
+  .mapboxgl-popup-close-button {
+    display: none;
+  }
+
+  .mapboxgl-map .mapboxgl-popup-content {
+    font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+    padding: 0;
+    width: 250px;
+    overflow: hidden;
+  }
+
+  .mapboxgl-popup-content h4 {
+      font-size: 0.8rem;
+  }
+
+  .mapboxgl-popup-content h4 > b{
+      margin-right:1em;
+  }
+
+  .mapboxgl-popup-content h3 {
+    font-size: 1.1rem;
+  }
+
+
+  .mapboxgl-popup-content-wrapper {
+    padding: 1%;
+  }
+
+  .mapboxgl-popup-content h3 {
+    background: rgb(61, 59, 59);
+    text-align: center;
+    color: #fff;
+    margin: 0;
+    display: block;
+    padding: 15px;
+    font-weight: 700;
+    margin-top: -5px;
+  }
+
+  .mapboxgl-popup-content h4 {
+    margin: 0;
+    display: block;
+    padding: 10px 3px 10px 10px;
+    font-weight: 400;
+  }
+
+  .mapboxgl-container {
+    cursor: pointer;
+  }
+
+  .mapboxgl-popup-anchor-top>.mapboxgl-popup-content {
+    margin-top: 3px;
+  }
+
+  .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
+    border-bottom-color: rgb(61, 59, 59);
+  }
+
+  /* Multiple popups */
+  .popup-container{
+    display:flex;
+  }
+
+  .popup-element {
+    width: 100%;
+  }
+
+  .popup-element h3 {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .popup-element h3 .fa:focus{
+    outline: 1px solid aqua;
+    color: aquamarine;
+  }
+
+  /* Color picker */
+  .color-picker {
+      position: absolute;
+      top:2%;
+      left:2%;
+  }
+
+  input {
+      width:20vw;
+      border-radius: 2px;
+      border-color: #ddd;
+      background-color: #fff;
+  }
+
 </style>
 <body>
   <main class="main-container">
     <div id="map" class="map"></div>
+    <div class="color-picker">
+        <input type="color" name="color" id="color-picker" value="#00d8f5">
+    </div>
   </main>
 
   <div class="snackbar"></div>
