hide the color pallete

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       position: absolute;
       top:2%;
       left:2%;
+      display: none;
   }
 
   input {
@@ -130,14 +131,7 @@
   </main>
 
   <div class="snackbar"></div>
-  <div class="spinner-modal">
-    <div class="spinner-backdrop">
-      <!-- gif -->
-    </div>
-    <div class="spinning-box"></div>
-    <p class="spinner-status">Loading data ....</p>
-  </div>
-  
+   
   <!-- <script class=""></script> -->
   <script async src="main.js"></script>
   
