clustered and unclustered maps

--- a/unclustered.html
+++ b/unclustered.html
@@ -120,11 +120,10 @@
       background-color: #fff;
       display: none;
   }
-
+  
   .color-picker img {
     width:100%;
   }
-
 </style>
 <body>
   <main class="main-container">
@@ -138,7 +137,7 @@
   <div class="snackbar"></div>
    
   <!-- <script class=""></script> -->
-  <script async src="main.js"></script>
+  <script async src="unclustered.js"></script>
   
 </body>
 
