added a legend and changed the circle colors

--- a/unclustered.html
+++ b/unclustered.html
@@ -124,6 +124,25 @@
   .color-picker img {
     width:100%;
   }
+  
+  .legend {
+    display:flex;
+    color:#fff;
+  }
+  .icon {
+    width:20px;
+    height:20px;
+    border-radius:10px;
+    margin-right:1em;
+  }
+
+  .icon-green {
+    background-color:#69FABD;
+  }
+  .icon-blue {
+    margin-left:1em;
+    background-color:#00AEE9;
+  }
 </style>
 <body>
   <main class="main-container">
