--- a/unclustered.html
+++ b/unclustered.html
@@ -122,7 +122,7 @@
   }
   
   .color-picker img {
-    width:100%;
+    height: 35px;
   }
   
   .legend {
@@ -149,7 +149,7 @@
     <div id="map" class="map"></div>
     <div class="color-picker">
         <input type="color" name="color" id="color-picker" value="#00d8f5">
-        <img src="dark.svg" alt="logo">
+        <img src="white.svg" alt="logo">
     </div>
   </main>
 
