--- a/unclustered.html
+++ b/unclustered.html
@@ -39,13 +39,17 @@
     width: 150px;
     overflow: hidden;
     background-color: #2e2e2e;
+    box-shadow: 0 1px 2px 0.01em #ffffff;
   }
 
   .mapboxgl-popup-content h4 {
       font-size: 1.8rem;
-      font-weight: 900;
+      font-weight: 700;
       color:white;
       margin:0.2em;
+      position: absolute;
+      top:10%;
+      right: 4%;
   }
 
   .mapboxgl-popup-content h4 > b{
@@ -79,14 +83,6 @@
 
   .mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
     margin-top: 3px;
-  }
-
-  .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
-    border-bottom-color: rgb(61, 59, 59) !important;
-  }
-
-  .mapboxgl-popup-anchor-bottom > .mapboxgl-popup-tip {
-    border-bottom-color: rgb(61, 59, 59) !important;
   }
 
   /* Multiple popups */
@@ -154,6 +150,11 @@
     max-width: 150px;
     padding: 20px 10px 5px;
     text-align: center;
+  }
+
+  .img-center {
+    mix-blend-mode: multiply;
+    height: 80px;
   }
 </style>
 <body>
