adjust the margin of the logo image

--- a/unclustered.html
+++ b/unclustered.html
@@ -152,6 +152,12 @@
     text-align: center;
   }
 
+  .logo-img {
+    height: 23px;
+    margin-left: 13px;
+    margin-top: 2px;
+  }
+  
   .img-center {
     mix-blend-mode: multiply;
     height: 80px;
